# docs/swagger.json
@@ -4,6 +4,22 @@
         "contact": {}
     },
     "paths": {
+        "/login": {
+            "post": {
+                "tags": [
+                    "登录"
+                ],
+                "summary": "登录",
+                "responses": {
+                    "200": {
+                        "description": "code\", \"message\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user": {
             "post": {
                 "consumes": [
@@ -15,8 +31,8 @@
                 "summary": "新增用户",
                 "parameters": [
                     {
-                        "description": "data",
-                        "name": "data",
+                        "description": "userData",
+                        "name": "userData",
                         "in": "body",
                         "required": true,
                         "schema": {
